--- a/BranchBound/BranchBound.vcxproj
+++ b/BranchBound/BranchBound.vcxproj
@@ -151,11 +151,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BB.cpp" />
     <ClCompile Include="BP.cpp" />
+    <ClCompile Include="BPSol.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BB.h" />
     <ClInclude Include="BP.h" />
+    <ClInclude Include="BPSol.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
